fix header margin on small screen

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -50,7 +50,7 @@
     height: 64px;
     border-bottom: none;
     justify-content: space-between;
-    margin: 0 20px;
+    padding-left: 20px;
   }
 
   .header__header-menu {
